a real end of day commit

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</p>
 				</section>
 
-				<section>
+				<section data-background="images/directions.jpg">
 					<h1>Overview</h1>
 					<ul>
 						<li>About Me</li>
@@ -99,8 +99,7 @@
 					<h1>Caveats</h1>
 				</section>
 
-				<section>
-					<h1>Questions ???</h1>
+				<section data-background="images/questionmark.jpg">
 				</section>
 
 
