still not done but we are getting there

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					</ul>
 				</section>
 
-				<section data-background="images/squirrel.JPG">
+				<section data-background="images/squirrel.jpg">
 					<h1>About Me</h1>
 					<pre class="fragment"><code>
 class ReneCalles(Programmer, MediaEnthusiast):
