--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 						<li>About Me</li>
 						<li>What is (de-)serialising</li>
 						<li>Complex Objects</li>
-						<li>Why (de-)serialising</li>
-						<li>Why JSON?</li>
+						<li>What is (De-)serialising</li>
 						<li>Extending JSON</li>
 						<li>Demo</li>
 						<li>Caveats</li>
@@ -84,11 +83,20 @@ class ReneCalles(Programmer, MediaEnthusiast):
 				</section>
 
 				<section data-background="images/puzzle_what.jpg">
-					<h1>What is <br>(de-)serialising</h1>
+					<h1>(De-)serialising</h1>
+					<blockquote cite="https://en.wikipedia.org/wiki/Serialization">
+						<p>&ldquo; ...is the process of translating data structures or object state into a format that can be stored (for example, in a file or memory buffer, or transmitted across a network connection link) and reconstructed later in the same or another computer environment.&rdquo;</p>
+						<cite><small style="float: right;text-align: right;margin-top: 4px;"><a href="https://en.wikipedia.org/wiki/Serialization">Wikipedia</a></small></cite>
+						<!--<br><p></p>-->
+					</blockquote>
 				</section>
 
-				<section>
-					<h1>Why (de-)serialising</h1>
+				<section data-background="images/network.jpg">
+					<h1>But why?</h1>
+					<ul>
+						<li class="fragment">Saving an objects current state</li>
+						<li class="fragment">Talking to JSON Rest-API's</li>
+					</ul>
 				</section>
 
 				<section data-background="images/matrjoschka.jpg">
@@ -218,10 +226,10 @@ def object_decoder(obj):
 
 				<section data-background="images/crash_test_dummy.jpg">
 					<section>
-						<h1>Proove me wrong</h1>
+						<h1>Test me if you can</h1>
 					</section>
 					<section>
-						<h1>Proove me wrong</h1>
+						<h1>Test me if you can</h1>
 						<pre><code data-trim data-noescape>
 class TestSerialisation(unittest.TestCase):
 
@@ -250,6 +258,11 @@ class TestSerialisation(unittest.TestCase):
 
 				<section data-background="images/puzzle_done.jpg">
 					<h1>Caveats</h1>
+					<ul>
+						<li class="fragment">Object comparison may fail after deserialisation</li>
+						<li class="fragment">Ensure that unneeded attributes will not be serialized</li>
+						<li class="fragment">Requires work for every new class added</li>
+					</ul>
 				</section>
 
 				<section data-background="images/questionmark.jpg">
@@ -268,6 +281,7 @@ class TestSerialisation(unittest.TestCase):
 						<li>directions.jpg [<a href="https://www.flickr.com/photos/kryshen/">Mikhail Kryshen</a>]</li>
 						<li>matjoschka.jpg [<a href="https://www.flickr.com/photos/68069913@N02/">DryHundredFear</a>]</li>
 						<li>crash_test_dummy.jpg [<a href="https://www.flickr.com/photos/50732955@N00/">Timmy_L</a>]</li>
+						<li>network.jpg [<a href="https://www.flickr.com/photos/spyk//">Antoine Colette</a>]</li>
 						<li>onelove.jpg [<a href="https://renevolution.com">René Calles</a>]</li>
 						<li>squirrel.jpg [<a href="https://renevolution.com">René Calles</a>]</li>
 					</ul>
