polished attributions #dirtyhack

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@ def object_decoder(obj):
 				</section>
 
 				<section data-background="images/crash_test_dummy.jpg" data-attribution-name="Timmy_L" data-attribution-url="https://www.flickr.com/photos/50732955@N00/">
-					<section>
+					<section data-attribution-name="Timmy_L" data-attribution-url="https://www.flickr.com/photos/50732955@N00/">
 						<h1>Test me if you can</h1>
 					</section>
-					<section>
+					<section data-attribution-name="Timmy_L" data-attribution-url="https://www.flickr.com/photos/50732955@N00/">
 						<h1>Test me if you can</h1>
 						<pre><code data-trim data-noescape>
 class TestSerialisation(unittest.TestCase):
