--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 					<ul>
 						<li>About Me</li>
 						<li>What is (de-)serializing</li>
+						<li>But why?</li>
 						<li>Complex Objects</li>
-						<li>What is (De-)serializing</li>
 						<li>Extending JSON</li>
-						<li>Demo</li>
+						<li>Showtime</li>
 						<li>Caveats</li>
-						<li>Questions</li>
+						<li>Time for Questions</li>
 					</ul>
 				</section>
 
