turn controls back on

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ class TestSerialization(unittest.TestCase):
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 
-				controls: false,
+				controls: true,
 				progress: true,
 				history: true,
 				center: true,
